--- a/lp02.md
+++ b/lp02.md
@@ -1,4 +1,4 @@
 #Larry Plotter y La Clave Secreta del Wifi
 
 Desde que en *Matrix* hubo un bug, la escuela se encuentra asedidada por un virus
-contra el que **Larry** y sus amigos deberán luchar.
+contra el que **Larry** y sus amigos deberan luchar.
