--- a/lp02.md
+++ b/lp02.md
@@ -2,3 +2,6 @@
 
 Desde que en *Matrix* hubo un bug, la escuela se encuentra asedidada por un virus
 contra el que **Larry** y sus amigos deberan luchar.
+
+Como el malvado hacker **Ballmermort** le metió un troyano,
+en su propio código podría esconderse malware.
